tests/snapshots/snapshot__no_default_features@seed.snap
---
source: tests/snapshot.rs
expression: output

---
running: cmd=test package=sample features=[]......OK
running: cmd=test package=sample features=[feat-a]......OK
running: cmd=test package=sample features=[feat-a,feat-b]......OK
running: cmd=test package=sample features=[feat-b]......OK
