tests/snapshots/snapshot__test@conflict.snap
---
source: tests/snapshot.rs
expression: output

---
running: cmd=clippy package=sample features=[]......OK
running: cmd=clippy package=sample features=[feat-a,feat-b]......OK
running: cmd=clippy package=sample features=[feat-a,feat-b,feat-e]......OK
running: cmd=clippy package=sample features=[feat-b]......OK
running: cmd=clippy package=sample features=[feat-b,feat-e]......OK
running: cmd=clippy package=sample features=[feat-c,feat-d]......OK
running: cmd=clippy package=sample features=[feat-c,feat-d,feat-e]......OK
running: cmd=clippy package=sample features=[feat-d]......OK
running: cmd=clippy package=sample features=[feat-d,feat-e]......OK
running: cmd=clippy package=sample features=[feat-e]......OK
