tests/snapshots/snapshot__test@empty.snap
---
source: tests/snapshot.rs
expression: output

---
running: cmd=clippy package=sample features=[]......OK
