tests/snapshots/snapshot__test@seed.snap
---
source: tests/snapshot.rs
expression: output

---
running: cmd=clippy package=sample features=[]......OK
running: cmd=clippy package=sample features=[feat-a]......OK
running: cmd=clippy package=sample features=[feat-a,feat-b]......OK
running: cmd=clippy package=sample features=[feat-b]......OK
